--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG
                 </div>
                 <div class="carousel-item">
                   <img src="./natturky.png" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
+                  <div class="carousel-caption d-none d-block">
                     <h5 class="text-light fs-4">Turky</h5>
                     <p class="text-light">Some representative placeholder content for the third slide.</p>
                     <button class="btn btn-outline-info">Explore Now</button>
